--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.52.2
-pillow==12.0.0
-langchain-google-genai==1.0.10
-langchain-core==0.2.38
+openai==1.59.0
+streamlit==1.41.1
+Pillow==11.0.0
+python-dotenv==1.0.1
