--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-openai==1.59.0
-streamlit==1.41.1
-Pillow==11.0.0
-python-dotenv==1.0.1
+streamlit
+Pillow
+langchain-google-genai
+langchain-core
+google-generativeai
+python-dotenv
